--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "a": "babel-node ./stack/test.js"
+    "a": "babel-node ./stack/test.js",
+    "start": "webpack-dev-server --config=webpack.config.js",
+    "build": "webpack --config=webpack.config.js"
   },
   "author": "Han",
   "license": "ISC",
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.2",
+    "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
